<resources>
    <string name="app_name">Translator</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="home">主页</string>
    <string name="dictionary">词典</string>
    <string name="translate">翻译</string>
    <string name="user">我的</string>
    <string name="word_input_hint">查询单词</string>
    <string name="search">搜索</string>
    <string name="translate_input_hint">输入文本以翻译</string>
    <string name="pronunciation_American">美式</string>
    <string name="pronunciation_English">英式</string>
    <string name="word_plural_label">复数：</string>
    <string name="word_third_label">第三人称单数：</string>
    <string name="word_past_label">过去式：</string>
    <string name="word_done_label">过去分词：</string>
    <string name="word_ing_label">现在分词：</string>
    <string name="word_er_label">比较级：</string>
    <string name="word_est_label">最高级：</string>
    <string name="word_variation_label">词性变化</string>
    <string name="word_means_label">释义</string>
    <string name="Chinese">中文</string>
    <string name="English">英文</string>
    <string name="loading">加载中…</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="input_password_again">再次输入密码</string>
    <string name="register">注册</string>
    <string name="user_not_exist">用户不存在</string>
    <string name="password_incorrect">密码不正确</string>
    <string name="user_exist">用户已存在，请登录</string>
    <string name="translate_failed">翻译失败</string>
    <string name="please_input_text">文本不能为空，请输入文本</string>
    <string name="remember_password">记住密码</string>
    <string name="please_login_to_use_history">要查看历史记录，请先登录</string>
    <string name="username_password_must_not_empty">用户名和密码都必须不为空</string>
    <string name="password_not_same">两次输入的密码不同</string>
    <string name="register_success">注册成功，请登录</string>
    <string name="network_error">网络错误</string>
    <string name="click_to_login">点此登录</string>
    <string name="welcome">欢迎，%s，点此登出</string>
    <string name="daily_sentence_chinese">每日一句！</string>
    <string name="daily_sentence_english">One sentence a day!</string>
    <string name="api_error">API错误</string>
    <string name="login_success">登录成功，欢迎你，%s</string>
    <string name="history_empty">没有历史记录</string>
    <string name="action_login">登录</string>
    <string name="please_input_single_word">这是词典，请输入一个单词进行查词，如果你想翻译，请转到翻译界面</string>
    <string name="action_logout">退出登录</string>
    <string name="add_to_word_book">添加到单词本</string>
    <string name="please_login_to_use_word_book">请登录再使用生词本</string>
    <string name="word_book">生词本</string>
    <string name="empty_word_book">空的生词本</string>
    <string name="sort_by">排序方式</string>
    <string name="sort_by_letter">按字母排序</string>
    <string name="sort_by_length">按长度排序</string>
    <string name="sort_by_default">默认排序</string>
    <string name="remove">移除</string>
    <string name="has_selected_item">已选择%d项</string>
    <string name="delete_selected_item">你确定要移除所选项目？</string>
    <string name="auto_language_cannot_swap">自动检测不可交换</string>
    <string name="timeout">网络超时</string>
    <string name="connect_fail">网络连接异常</string>
</resources>