<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginEnd="20dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/user_name_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/username"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="50dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/password_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="50dp" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/password_again_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/password_again"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@null"
                android:hint="@string/input_password_again"
                android:inputType="textPassword"
                android:maxLines="1"
                android:ellipsize="end"
                android:paddingStart="10dp"
                android:paddingEnd="50dp"
                android:visibility="gone"
                tools:visibility="visible" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/remember_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remember_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/login"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:text="@string/register"
                tools:ignore="ButtonStyle" />

        </LinearLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>