<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <include
                android:id="@+id/pn_en_card"
                layout="@layout/item_card_pronunciation"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="35dp" />

            <include
                android:id="@+id/pn_am_card"
                layout="@layout/item_card_pronunciation"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="35dp"
                android:layout_marginStart="5dp" />

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/add_to_word_book"
                android:layout_width="wrap_content"
                android:text="@string/add_to_word_book"
                android:layout_gravity="center_vertical"

                android:layout_height="35dp" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/word_variation_label"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <include
                        android:id="@+id/word_variation"
                        layout="@layout/item_word_variation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="30dp"
                        android:layout_marginEnd="10dp" />
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginTop="5dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        android:text="@string/word_means_label"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/means_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:paddingStart="10dp"
                        android:paddingEnd="10dp"
                        tools:listitem="@layout/item_word_mean" />
                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</ScrollView>